cmake: add shortcut for indenting all json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,11 +371,13 @@ if (DOGEN_KNITTER_EXECUTABLE AND DOGEN_STITCHER_EXECUTABLE)
     add_custom_target(ka)
     add_custom_target(sa)
     add_custom_target(ta)
+    add_custom_target(iaj)
 
     add_dependencies(kas knit_and_stitch)
     add_dependencies(ka knit_all)
     add_dependencies(sa stitch_all)
     add_dependencies(ta tailor_all)
+    add_dependencies(iaj indent_all_json)
 endif()
 
 #
