--- a/.travis.yml
+++ b/.travis.yml
@@ -26,14 +26,14 @@ git:
 
 matrix:
   include:
-    # - os: osx
-    #   compiler: clang
-    #   osx_image: xcode8
-    #   env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang"
-    # - os: osx
-    #   compiler: clang
-    #   osx_image: xcode8
-    #   env: BUILD_TYPE=Debug COMPILER="clang"
+    - os: osx
+      compiler: clang
+      osx_image: xcode8
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang"
+    - os: osx
+      compiler: clang
+      osx_image: xcode8
+      env: BUILD_TYPE=Debug COMPILER="clang"
     - os: linux
       compiler: gcc
       env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc" WITH_CSHARP="1"
