knit: remove model
All functionality has been merged into yarn so we can safely remove
the knit model.

--- a/projects/tailor/src/CMakeLists.txt
+++ b/projects/tailor/src/CMakeLists.txt
@@ -34,6 +34,8 @@ target_link_libraries(${name}
     yarn
     yarn.dia
     yarn.json
+    quilt.cpp
+    quilt.csharp
     ${LIBXML2_LIBRARIES}
     ${Boost_LIBRARIES})
 
