dia: cosmetic changes to python script
- rename directory to language name
- add licence to script
- ignore script when code-generating

--- a/projects/input_models/dia/CMakeLists.txt
+++ b/projects/input_models/dia/CMakeLists.txt
@@ -26,6 +26,8 @@ if (DOGEN_KNITTER_EXECUTABLE)
     set(ignore_regexes ${ignore_regexes} ${ig_flg} .*/test/.*)
     set(ignore_regexes ${ignore_regexes} ${ig_flg} .*/tests/.*)
     set(ignore_regexes ${ignore_regexes} ${ig_flg} .*/poly-stitch.el)
+    set(ignore_regexes ${ignore_regexes} ${ig_flg} .*/colour.py)
+
 
     set(other_options --log-level ${DOGEN_LOG_LEVEL})
     set(other_options ${other_options} --delete-extra-files)
