--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,8 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER} ; fi
 
 after_success:
-  - coveralls --exclude tests --gcov-options '\-lp'
+  - coveralls --exclude-pattern ".*/tests/.*" --exclude /tmp/dogen_deps --exclude /usr/include
+  --gcov-options '\-lp'
 
 notifications:
   email:
