travis: feed exclude patterns directly into gcov options

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER} ; fi
 
 after_success:
-  - coveralls --exclude-pattern ".*/tests/.*" --exclude /tmp/dogen_deps --exclude /usr/include --gcov-options '\-lp'
+  - coveralls --gcov-options '\-lp --exclude-pattern ".*/tests/.*" --exclude-pattern "/tmp/dogen_deps/.*" --exclude-pattern "/usr/include/.*"'
 
 notifications:
   email:
