cmake: add shortcut for validate all json target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -408,12 +408,14 @@ if (DOGEN_KNITTER_EXECUTABLE AND DOGEN_STITCHER_EXECUTABLE)
     add_custom_target(sa)
     add_custom_target(ta)
     add_custom_target(iaj)
+    add_custom_target(vaj)
 
     add_dependencies(kas knit_and_stitch)
     add_dependencies(ka knit_all)
     add_dependencies(sa stitch_all)
     add_dependencies(ta tailor_all)
     add_dependencies(iaj indent_all_json)
+    add_dependencies(vaj indent_all_json)
 endif()
 
 #
